--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
   </div>
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
-      <!--h2 class="display-5">Who We Are</h2>
-      <p class="lead">Is what we do.</p>
-      <p>Put out a premium painting product.</p-->
-      <a class="btn btn-lg btn-outline-warning" href="#">Who We Are</a><br/>
+      <a class="btn btn-lg btn-outline-warning" href="#">Who We Are</a><br/><br/><br/>
       <a class="btn btn-lg btn-outline-warning" href="#">What We Do</a>
     </div>
   </div>
@@ -70,17 +67,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-lg btn-outline-warning">View</button>
-                      <button type="button" class="btn btn-lg btn-outline-warning">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
+                <img class="card-img-top" data-src="https://slocumpainting.github.io/projectImages/img%20(1).jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-4">
