--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </div>
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
-      <a class="btn btn-lg btn-outline-warning" href="#">Who We Are</a><br/><br/><br/>
-      <a class="btn btn-lg btn-outline-warning" href="#">What We Do</a>
+      <a class="btn btn-lg btn-warning" href="#">Who We Are</a><br/><br/><br/>
+      <a class="btn btn-lg btn-warning" href="#">What We Do</a>
     </div>
   </div>
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
