--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <div class="my-3 py-3">
       <h2 class="display-5">Still not convinced?</h2>
       <p class="lead">Take a look.<br/>You will be.</p>
-      <a class="btn btn-outline-light" href="#" style="color:white;">Trust Your Own Eyes</a>
+      <a class="btn btn-outline-light" href="#album" style="color:white;">Trust Your Own Eyes</a>
     </div>
   </div>
 </div>
-   <div class="album py-5 bg-light">
+   <div id="album" class="album py-5 bg-light">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -76,32 +76,20 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap" style="-webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);">
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(3).JPG" alt="Card image cap" style="-webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);">
               </div>
             </div>
 
