--- a/index.html
+++ b/index.html
@@ -76,20 +76,12 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap" style="-webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap" >
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(3).JPG" alt="Card image cap" style="-webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(3).JPG" alt="Card image cap">
               </div>
             </div>
 
