--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(1).JPG" alt="Card image cap" style="-webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(1).JPG" alt="Card image cap" style="image-orientation:from-image;>
               </div>
             </div>
             <div class="col-md-4">
