--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
          </div>
        </div>
      </div>
+    <div class="album py-5 bg-light">
+        <div class="container">
     <img class="" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap">
     <img class="" src="https://slocumpainting.github.io/img%20(4).JPG" alt="Card image cap">
     <img class="" src="https://slocumpainting.github.io/img%20(5).JPG" alt="Card image cap">
-             
+      </div></div>      
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
