--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-    <img class="" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap">
+    <img class="card-img-top" src="https://slocumpainting.github.io/img%20(2).JPG" alt="Card image cap">
               </div></div></div></div></div>      
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
