--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 font-weight-normal">Need a painter?</h1>
       <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
-      <a class="btn btn-outline-secondary" href="#">Get An Estimate</a>
+      <a class="btn btn-outline-secondary" href="mailto:justin@slocumpainting.com">Get An Estimate</a>
     </div>
   </div>
 
@@ -48,12 +48,12 @@
          <div class="my-3 py-3">
            <h2 class="display-5">Turn-key Painter?</h2>
            <p class="lead">We've been looking for you.</p>
-           <a class="btn btn-outline-light text-white" href="#">Come Work For Us</a>
+           <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com">Come Work For Us</a>
          </div>
        </div>
        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
          <div class="my-3 p-3">
-           <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a><br/><br/><br/>
+           <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a><br/><br/>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">What We Do</a>
          </div>
        </div>
