--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          </div>
        </div>
      </div>
-    <div class="album py-5 bg-light">
+    <div id="album" class="album py-5 bg-light">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
