--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
               </div>
             </div>
           </div>
+           <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(7).JPG" alt="Card image cap">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(8).JPG" alt="Card image cap">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="https://slocumpainting.github.io/img%20(9).JPG" alt="Card image cap">
+              </div>
+            </div>
+          </div>
       </div>
     </div>      
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
