--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
        </div>
        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
          <div class="my-3 p-3">
+           <h2 class="display-5">Want To Know More?</h2>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">What We Do</a>
          </div>
