--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
            <h2 class="display-5">Want To Know More?</h2>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">What We Do</a>
+           <a class="btn btn-lg btn-block btn-outline-primary" href="#">How We Do It</a>
          </div>
        </div>
          <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
