--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
            <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com">Come Work For Us</a>
          </div>
        </div>
-       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
+       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">Want To Know More?</h2>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">What We Do</a>
-           <a class="btn btn-lg btn-block btn-outline-primary" href="#">How We Do It</a>
          </div>
        </div>
          <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
