--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
            <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com">Come Work For Us</a>
          </div>
        </div>
-       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="">
+       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">Want To Know More?</h2>
            <a class="btn btn-lg btn-block btn-outline-primary" href="#">Who We Are</a>
