--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">About Us</h2>
-           <a class="btn btn-outline-primary" href="#">Who We Are</a>
-           <a class="btn btn-outline-primary" href="#">What We Do</a>
+           <a class="btn btn-block btn-outline-primary" href="#">Who We Are</a>
+           <a class="btn btn-block btn-outline-primary" href="#">What We Do</a>
          </div>
        </div>
          <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
