--- a/index.html
+++ b/index.html
@@ -54,16 +54,8 @@
        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">About Us</h2>
-           <a class="btn btn-block btn-outline-primary" href="#">Who We Are</a>
-           <a class="btn btn-block btn-outline-primary" href="#">What We Do</a>
-           <p>
-  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-    Link with href
-  </a>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-    Button with data-target
-  </button>
-</p>
+           <a class="btn btn-block btn-outline-primary" href="javascript:toggleCollapsed(WhoWeAre);">Who We Are</a>
+           <a class="btn btn-block btn-outline-primary" href="javascript:toggleCollapsed(WhatWeDo);">What We Do</a>
          </div>
        </div>
          <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
@@ -75,11 +67,16 @@
        </div>
      </div>
     
-    <div class="" id="collapseExample">
-  <div class="card card-body">
-    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-  </div>
-</div>
+      <div class="collapse" id="WhoWeAre">
+        <div class="card card-body">
+          Professional Painters Putting Out A Premium Painting Product.
+        </div>
+      </div>
+      <div class="collapse" id="WhatWeDo">
+        <div class="card card-body">
+          Put Out A Premium Painting Product, Professionally.
+        </div>
+      </div>
     
     <div id="album" class="album py-5 bg-light">
         <div class="container">
@@ -139,6 +136,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+    <script>
+      function toggleCollapsed(ID){
+        alert("got here");
+      }
+    </script>
   </body>
 </html>
 
