--- a/index.html
+++ b/index.html
@@ -138,7 +138,15 @@
     </script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <script>
       function toggleCollapsed(ID){
-        alert("got here" + ID);
+        alert("got here" + ID.class);
+        if(ID.class=="collapse")
+        {
+          ID.class="";
+        }
+         else
+         {
+           ID.class="collapse";
+         }
       }
     </script>
   </body>
