--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
        </div>
      </div>
     
-      <div class="collapse" id="WhoWeAre">
+      <div class="" id="WhoWeAre">
         <div class="card card-body">
           Professional Painters Putting Out A Premium Painting Product.
         </div>
       </div>
-      <div class="collapse" id="WhatWeDo">
+      <div class="" id="WhatWeDo">
         <div class="card card-body">
           Put Out A Premium Painting Product, Professionally.
         </div>
@@ -138,7 +138,7 @@
     </script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <script>
       function toggleCollapsed(ID){
-        alert("1 got here" + ID.class);
+        //alert("1 got here" + ID.class);
         if(ID.class=="collapse")
         {
           ID.class="";
