--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <script>
       function toggleCollapsed(ID){
-        //alert("1 got here" + ID.class);
+        alert("On entering toggleCollapsed(ID) function ID.Class==" + ID.class);
         if(ID.class=="collapse")
         {
           ID.class="";
@@ -147,6 +147,7 @@
          {
            ID.class="collapse";
          }
+        alert("On exiting toggleCollapsed(ID) function ID.Class==" + ID.class);
       }
     </script>
   </body>
