--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
        </div>
      </div>
     
-      <div class="" id="WhoWeAre">
+      <div class="collapse" id="WhoWeAre">
         <div class="card card-body">
           Professional Painters Putting Out A Premium Painting Product.
         </div>
       </div>
-      <div class="" id="WhatWeDo">
+      <div class="collapse" id="WhatWeDo">
         <div class="card card-body">
           Put Out A Premium Painting Product, Professionally.
         </div>
