--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">About Us</h2>
-           <a class="btn btn-block btn-outline-primary" href="javascript:toggleCollapsed(WhoWeAre);">Who We Are</a>
-           <a class="btn btn-block btn-outline-primary" href="javascript:toggleCollapsed(WhatWeDo);">What We Do</a>
+           <a class="btn btn-block btn-outline-primary" data-toggle="collapse" href="#WhoWeAre" role="button" aria-expanded="false" aria-controls="WhoWeAre">Who We Are</a>
+           <a class="btn btn-block btn-outline-primary" data-toggle="collapse" href="#WhatWeDo" role="button" aria-expanded="false" aria-controls="WhatWeDo">What We Do</a>
          </div>
        </div>
          <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
@@ -150,19 +150,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-    <script>
-      function toggleCollapsed(ID){
-        alert("On entering toggleCollapsed(ID) function ID.Class==" + ID.class);
-        if(ID.class=="collapse")
-        {
-          ID.class="";
-        }
-         else
-         {
-           ID.class="collapse";
-         }
-        alert("On exiting toggleCollapsed(ID) function ID.Class==" + ID.class);
-      }
-    </script>
   </body>
 </html>
