--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
 
      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-primary overflow-hidden" style="">
+         <div class="bg-success mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" style="">
          <div class="my-3 p-3">
            <h2 class="display-5">About Us</h2>
            <a class="btn btn-block btn-outline-primary" data-toggle="collapse" href="#WhoWeAre" role="button" aria-expanded="false" aria-controls="WhoWeAre">Who We Are</a>
