--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <div class="my-3 py-3">
            <h2 class="display-5">Turn-key Painter?</h2>
            <p class="lead">We've been looking for you.</p>
-           <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com">Come Work For Us</a>
+           <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com?subject=test">Come Work For Us</a>
          </div>
        </div>
 
