--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <div class="my-3 py-3">
            <h2 class="display-5">Turn-key Painter?</h2>
            <p class="lead">We've been looking for you.</p>
-           <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com?subject=test">Come Work For Us</a>
+           <a class="btn btn-outline-light text-white" href="mailto:justin@slocumpainting.com?subject=Seeking%20Employment&body=Test">Come Work For Us</a>
          </div>
        </div>
 
@@ -139,24 +139,7 @@
           </div>
       </div>
     </div>
-        <script type="text/javascript">
-    function loadEvents() {
-        var mailString;
-        function updateMailString() {
-            mailString = '?subject=' + encodeURIComponent($('#subject').val())
-                + '&body=' + encodeURIComponent($('#message').val());
-            $('#mail-link').attr('href',  'mailto:person@email.com' + mailString);
-        }
-        $( "#subject" ).focusout(function() { updateMailString(); });
-        $( "#message" ).focusout(function() { updateMailString(); });
-        updateMailString();
-    }
-</script>
-    <p><input id="subject" type="text" placeholder="type your subject here" 
-    class="form-control"></p>
-<p><input id="message" type="text" placeholder="type your message here" 
-    class="form-control"></p>
-<p><a id="mail-link" class="btn btn-primary">Create email</a></p>
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script><script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
