--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 font-weight-normal">Need a painter?</h1>
       <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
-      <a class="btn btn-outline-secondary" href="mailto:justin@slocumpainting.com">Get An Estimate</a>
+      <a class="btn btn-outline-secondary" href="mailto:justin@slocumpainting.com?subject=Seeking%20Estimate&body=Name:%0D%0APhone#:%0D%0AAddress:%0D%0ACity,State%20Zip:%0D%0AYear%20structure%20built:%0D%0AYear%20last%20painted:%0D%0AProject%20Description:%0D%0A%0D%0A%0D%0A">Get An Estimate</a>
     </div>
   </div>
     
