--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
           <div class="collapse" id="WhoWeAre">
         <div class="card card-body text-center">
           <h2 class="display-5">Who We Are.</h2>
-          <p class="lead">Professional Painters Putting Out A Premium Painting Product.</p>
+          <p class="lead">We are professional painters committed to putting out a premium painting product.</p>
         </div>
       </div>
       <div class="collapse" id="WhatWeDo">
         <div class="card card-body text-center">
           <h2 class="display-5">What We Do.</h2>
-          <p class="lead">Put Out A Premium Painting Product, Professionally.</p>
+          <p class="lead">We tap into our vast experience and expertise in the painting industry to deliver top tier painting services designed to put our customers at ease and leave them singing or praises to their friends and family. Word of mouth and neighbors asking our customers who painted their homes are the main drivers of our business because our work looks always looks amazing and we go above and beyond to makes our customers happy.</p>
         </div>
       </div>
     
