--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="collapse" id="WhoWeAre">
         <div class="card card-body text-center">
           <h2 class="display-5">Who We Are.</h2>
-          <p class="lead">We are professional painters committed to putting out a premium painting product. Period. No jokes. No gimmicks. Just people at the top of their field working hard to stay that way.</p>
+          <p class="lead">We are professional painters committed to putting out a premium painting product. No jokes. No gimmicks. Just people at the top of their field working hard to stay that way.</p>
         </div>
       </div>
       <div class="collapse" id="WhatWeDo">
