--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="collapse" id="WhatWeDo">
         <div class="card card-body text-center">
           <h2 class="display-5">What We Do.</h2>
-          <p class="lead">We tap into our vast experience and expertise in the painting industry to deliver top tier painting services designed to put our customers at ease and leave them singing or praises to their friends and family. Word of mouth and neighbors asking our customers who painted their homes are the main drivers of our business because our work looks always looks amazing and we go above and beyond to makes our customers happy.</p>
+          <p class="lead">We tap into our vast experience and expertise in the painting industry to deliver top tier painting services designed to put our customers at ease and leave them singing our praises. To their friends. To their families. Our goal is to create customers for life, and we want everyone to hear about it. Word of mouth and neighbors asking our customers who painted their homes are the main drivers of our business, because our work looks looks amazing and we go above and beyond to makes our customers happy to ensure that great relationship lasts long after your project is complete. We want to handle all of your painting needs, for you, and for everyone important to you. Let us show you why we're special. Your home deserves it.</p>
         </div>
       </div>
     
